# tg-media-bot

./: .dockerignore  Dockerfile
tg-media-bot/: .gitignore  README.md  pyproject.toml
tg-media-bot/app/: __init__.py  config.py  main.py  utils.py
tg-media-bot/app/bot/: __init__.py  callbacks.py  context.py  keyboards.py
tg-media-bot/app/bot/routers/: __init__.py  commands.py  media.py
tg-media-bot/app/services/: __init__.py  downloader.py  limits.py  queue.py  source_adapters.py  types.py
tg-media-bot/app/storage/: __init__.py  db.py  models.py  repositories.py
tg-media-bot/deploy/: .env.example  WEBHOOK_SETUP.md  tg-media-bot.service  webhook-nginx.conf
tg-media-bot/storage/migrations/: 001_init.sql
tg-media-bot/tests/integration/: test_update_mode.py
tg-media-bot/tests/unit/: test_callbacks.py  test_credentials_ttl.py  test_limits.py  test_source_detection.py  test_users.py  test_vk_post_repost.py
