[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-media-bot"
version = "0.1.0"
description = "Telegram bot for downloading media from links"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4,<4.0",
  "aiohttp>=3.9,<4.0",
  "aiosqlite>=0.20,<1.0",
  "yt-dlp>=2025.1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
